Improve the design and functionality of the site
---

For more details, open the [Copilot Workspace session](https://copilot-workspace.githubnext.com/eswarchandravidyasagar/portfolio-website?shareId=XXXX-XXXX-XXXX-XXXX).

--- a/index.html
+++ b/index.html
@@ -24,7 +24,18 @@
         <section id="projects">
             <h2>Projects</h2>
             <p>Here are some of the projects I've worked on:</p>
-            <!-- Add project details here -->
+            <div class="project">
+                <h3>Project 1: Data Visualization Dashboard</h3>
+                <p>A web-based dashboard that visualizes complex data sets using interactive charts and graphs. Built with D3.js and React.</p>
+            </div>
+            <div class="project">
+                <h3>Project 2: Machine Learning Model</h3>
+                <p>A machine learning model that predicts housing prices based on various features. Implemented using Python and scikit-learn.</p>
+            </div>
+            <div class="project">
+                <h3>Project 3: E-commerce Website</h3>
+                <p>An e-commerce website with a user-friendly interface and secure payment gateway. Developed using Node.js, Express, and MongoDB.</p>
+            </div>
         </section>
         <section id="contact">
             <h2>Contact</h2>
@@ -34,6 +45,10 @@
                 <input type="text" id="name" name="name" required>
                 <label for="email">Email:</label>
                 <input type="email" id="email" name="email" required>
+                <label for="phone">Phone Number:</label>
+                <input type="tel" id="phone" name="phone" required>
+                <label for="subject">Subject:</label>
+                <input type="text" id="subject" name="subject" required>
                 <label for="message">Message:</label>
                 <textarea id="message" name="message" required></textarea>
                 <button type="submit">Submit</button>
